--- a/Tutorial HTML.html
+++ b/Tutorial HTML.html
@@ -8,21 +8,28 @@
 </head>
 
 <body>
-    <h1>LISTA DE COMANDOS <u>HTML</u></h1>
-    <h1>h1 para título</h1>
+    <div>
+    <h1><u>HTML</u></h1>
+    <h1>LISTA DE TAGS </h1>
+   <br>
+</div>
+<div> 
+<h1>h1 para título</h1>
     Digite o h1 por exemplo: < h1> mas sem os espaços dentro do <> e após escrever o que deseja encerrar a ação repita o comando porém coloque / (barra) logo após abir o sinal < 
-        <p>
-            < p> para parágrafo < /p> sem espaço
-        </p>
-        <p> CTRL+S para salvar</p>
+      <p> < div > cria uma divisória como uma caixa de texto</p>  
+    <p> < p> para parágrafo < /p> sem espaço         </p>
+    <p> < br> para pular linha, essa tag não precisa fechar</p>
+        <p>CTRL+S para salvar</p>
         <P>ALT+LO para visualizar a página criada/atualizada</P>
-
+    </div>  
+    <div>
         <H2>
             < h2> para subtítulo
         </H2>
         <U>
             < u>
         </u>para sublinhar</U>
+    </div>
         <ul>
             < ul> para criar lista
         </ul>
@@ -34,6 +41,14 @@
         </li>
         </ul>
         <button> < button > gera o botão</button>
+        <form> < form > criar formulário
+        <fieldset> < fieldset > agrupador de campos
+            <div>
+                <label> label titulo do campo </label> 
+            </div>
+        </fieldset>
+        
+        </form>
 </body>
 <p>CTRL + SHIFT + F faz a identação</p>
 </html>
