--- a/Tutorial HTML.html
+++ b/Tutorial HTML.html
@@ -20,7 +20,7 @@
     <p> < p> para parágrafo < /p> sem espaço         </p>
     <p> < br> para pular linha, essa tag não precisa fechar</p>
         <p>CTRL+S para salvar</p>
-        <P>ALT+LO para visualizar a página criada/atualizada</P>
+        <P>ALT+LO para visualizar a página criada/atualizada, porém só servirá se tiver o Live Server instalado</P>
     </div>  
     <div>
         <H2>
