--- a/Index.html
+++ b/Index.html
@@ -30,6 +30,7 @@
             < u>
         </u>para sublinhar</U>
     </div>
+    <img src="https://www.guiaviagensbrasil.com/imagens/Imagem%20do%20mar%20calma%20e%20belo%20da%20Praia%20da%20Engenhoca-Itacar%C3%A9-Bahia-BA.jpg" />
         <ul>
             < ul> para criar lista
         </ul>
